--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <p>
             Punto 1-2-3: Proyecto Frontend
           </p> 
-          <a href="./punto-1-2-3/index.html">
+          <a href="./punto-1-2-3/page-structur.html">
             Punto 1-2-3 Demo
           </a>
         </li>
@@ -25,7 +25,7 @@
           <p>
             Punto 4: Títulos
           </p> 
-          <a href="./punto-4/index.html">
+          <a href="./punto-4/titles.html">
             Punto 4 Demo
           </a>
         </li>
@@ -33,7 +33,7 @@
           <p>
             Punto 5: Estilos de texto
           </p>
-          <a href="./punto-5/index.html">
+          <a href="./punto-5/parrafo.html">
             Punto 5 Demo
           </a>
         </li>
@@ -41,7 +41,7 @@
           <p>
             Punto 6: Enlaces
           </p>
-          <a href="./punto-6/index.html">
+          <a href="./punto-6/link.html">
             Punto 6 Demo
           </a>
         </li>
