--- a/punto-1-2-3/page-structur.html
+++ b/punto-1-2-3/page-structur.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header_navigator">
-            <img src="public/images/header-logo.png" alt="">
+            <img src="public/img/header-logo.png" alt="">
             <nav>
                 <li><a href="#banner">Curso</a></li>
                 <li><a href="#section-1">Participantes</a></li>
@@ -21,7 +21,7 @@
         </div>
         <div class="header_settings">
             <div class="language">
-                <img src="public/images/header-world.png" alt="header">
+                <img src="public/img/header-world.png" alt="header">
                 <span>Español</span>
                 <button>Ingresar</button>
             </div>
@@ -44,7 +44,7 @@
                     <button>Planes</button>
                 </div>
             </div>
-            <img src="public/images/banner-online.png" alt="banner">
+            <img src="public/img/banner-online.png" alt="banner">
         </section>
         <section id="section-1">
         <div class="section-1_info">
@@ -55,7 +55,7 @@
             </p>
         </div>
         <div class="section-1__info">
-            <img src="public/images/section1-education.png" 
+            <img src="public/img/section1-education.png" 
             alt="education"
             width="120px"
             height="120px"
@@ -64,14 +64,14 @@
         </div>
         <div class="section-1__info">
             <h3>Alcance de objetivos</h3>
-            <img src="public/images/section1-goals.png" 
+            <img src="public/img/section1-goals.png" 
             alt="goals"
             width="120px"
             height="120px"
             >
         </div>
         <div class="section-1__info">
-            <img src="public/images/section1-teach.png" 
+            <img src="public/img/section1-teach.png" 
             alt="teach"
             width="120px"
             height="120px"
@@ -82,7 +82,7 @@
         <section id="section-2">
             <div class="section-2_info">
             <img 
-            src="public/images/section2-tools.png" 
+            src="public/img/section2-tools copy.png" 
             alt="tools"
             width="500px"
             height="350px"
@@ -108,7 +108,7 @@
                 </p>
                 <button>saber más</button>
             </div>
-            <img src="public/images/section2-goals.png" 
+            <img src="public/img/section2-goals.png" 
             alt="goals"
             width="500px"
             height="350px"
@@ -118,9 +118,9 @@
     </main>
     <footer id="footer">
     <div class="footer__info">
-    <img src="public/images/footer-logo.png" 
+    <img src="public/img/footer-logo.png" 
     alt="logo"
-    width="20px"
+    width="200px"
     height="175px"
     >
     <p>
