--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <p>
             Punto 1-2-3: Proyecto Frontend
           </p> 
-          <a href="./punto-1-2-3/page-structur.html">
+          <a href="punto-1-2-3/page-structur.html">
             Punto 1-2-3 Demo
           </a>
         </li>
@@ -25,7 +25,7 @@
           <p>
             Punto 4: Títulos
           </p> 
-          <a href="./punto-4/titles.html">
+          <a href="punto-4/index.html">
             Punto 4 Demo
           </a>
         </li>
