--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <p>
             Punto 4: Títulos
           </p> 
-          <a href="punto-4/index.html">
+          <a href="punto-4/titles.html">
             Punto 4 Demo
           </a>
         </li>
