--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <p>
             Punto 7-8: Navegación
           </p>
-          <a href="./punto-7-8/index.html">
+          <a href="./punto-7-8/navegacion.html">
             Punto 7-8 Demo
           </a>
         </li>
@@ -57,7 +57,7 @@
           <p>
             Punto 9: Tablas
           </p>
-          <a href="./punto-9/index.html">
+          <a href="./punto-9/tabla.html">
             Punto 9 Demo
           </a>
         </li>
